--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,19 @@
   "description": "pain discord bot's server side",
   "main": "dist/index.js",
   "scripts": {
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "dev:build": "nodemon ."
   },
   "author": "Wilbert-mad",
   "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/morgan": "^1.9.2"
+    "@types/morgan": "^1.9.2",
+    "nodemon": "^2.0.7"
   }
 }
