--- a/server/package.json
+++ b/server/package.json
@@ -5,21 +5,29 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "watch": "tsc --watch",
+    "build:watch": "tsc --watch",
     "dev:build": "nodemon .",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "test": "npm-run-all build start"
   },
   "author": "Wilbert-mad",
   "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-oauth2": "^1.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/morgan": "^1.9.2",
-    "nodemon": "^2.0.7"
+    "@types/passport": "^1.0.6",
+    "@types/passport-oauth2": "^1.4.10",
+    "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5"
   }
 }
